	  negative consequence of using stale IP address mappings (2015-07-13).
	* graphics/, libnx/, and include/nuttx/nx:  Implement anti-aliasing in
	  order to clean the drawing of all edges (2015-07-14).
	* drivers/lcd/ and include/nuttx/lcd: Modify the SSD1306 LCD driver to
	  support either the SPI or I2C interface.  From Alan Carvalho de Assis
	  (2015-07-15).
	* arch/src/stm32f7 and arch/include/stm32f7:  Add architecture support
	  for the STMicro STM32 F7 (2015-07-15).
	* drivers/can.c:  Fix an issue in the CAN driver where the rx_sem
	  count can grow beyond bounds (2015-07-15).
	* configs/stm32f762g-disco/:  Add initialize support for the STMicor
	  STM32 F7 Discovery board.  This is a work in progress and will be a
	  while before it is fully functional (2015-07-16).
	* arch/../up_etherstub.c, arch/../up_initialize, and other files: Add
	  CONFIG_NETDEV_LATEINIT that can be used to suppress calls to
	  up_netinitialize() from early in initialization (2015-07-17).
	* arch/arm/src/stm32: Extend STM32 Ethernet operating frequency to
	  180MHz.  From Sebastien Lorquet (2015-07-17).
	* STM32 F7 Discovery:  Basic NSH configuration is functional with a
	  serial console.  I-/D-Caches and DTCM have been enabled.  The delay
	  loop has been calibrated -- very fast (2015-07-19).
	* drivers/sensor and include/nuttx/sensors: Add support to Bosch BMP180
	  barometer.  From Alan Carvalho de Assis (2015-07-20).
	* configs/stm32f4discovery/: Add support to BMP180 driver on the
	  STM32F4Discovery.  From Alan Carvalho de Assis (2015-07-20).
	* arch/arm/src/stm32f7:  Add an STM32 F7 Ethernet driver (2015-07-20).
	* arch/arm/src/stm32f7:  Port the STM32 F4 DMA driver.  Untested on
	  initial commit (2015-07-20).
	* arch/arm/src/sam34: Correct some problems with SAM3/4 watchdog driver.
	  Includes some small improvements.  From Max Neklyudov (2015-07-21).
	* arch/arm/src/stm32 and include/stm32:  Add support for the STMicro
	  STM32 F446.  From David Sidrane (2015-07-22).
