@@ -132,7 +132,7 @@ int sched_unlock(void)
            * timer for the next time slice.
            */
 
-          if ((rtcb->flags & TCB_FLAG_ROUND_ROBIN) != 0 &&
+          if ((rtcb->flags & TCB_FLAG_POLICY_MASK) == TCB_FLAG_SCHED_RR &&
               rtcb->timeslice == 0)
             {
               /* Yes.. that is the situation.  But one more thing.  The call
