@@ -10751,4 +10751,6 @@
 	  Includes some small improvements.  From Max Neklyudov (2015-07-21).
 	* arch/arm/src/stm32 and include/stm32:  Add support for the STMicro
 	  STM32 F446.  From David Sidrane (2015-07-22).
-
+	* include/nuttx/sched.h, sched/, and fs/procfs:  Increase the size of
+	  the scheduling policy field from 1 to 2 bits to allow additional,
+	  planned scheduling policies (2015-07-23).
